fixing several issues while build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ services:
 
 before_install:
   - docker build -t nousmotards/ansible .
+  - docker run nousmotards/ansible /bin/bash -c "git pull ; git checkout $(git tag -l | sort | grep -ve '.rc' -ve '.beta' -ve '.alpha' | tail -1) ; git submodule update ; make deb"
