--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 sudo: required
 
-language: python
-
 services:
   - docker
 
-before_install:
+install:
   - docker build -t nousmotards/ansible .
+
+script:
   - docker run nousmotards/ansible /bin/bash -c "git pull ; git checkout $(git tag -l | sort | grep -ve '.rc' -ve '.beta' -ve '.alpha' | tail -1) ; git submodule update ; make deb"
