--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - docker build -t nousmotards/ansible .
 
 script:
-  - docker run nousmotards/ansible /bin/bash -c "git pull ; git checkout $(git tag -l | sort | grep -ve '.rc' -ve '.beta' -ve '.alpha' | tail -1) ; git submodule update ; make deb"
+  - docker run nousmotards/ansible /bin/bash -c "git pull ; git submodule init ; git submodule update ; make deb"
